unpackaged/main/default/objects/FSL_Minute_Schedule_Task__mdt/FSL_Minute_Schedule_Task__mdt.object-meta.xml
<CustomObject>
    <description>Contains the configuration for tasks used called in the minute schedule</description>
    <label>FSL Minute Schedule Task</label>
    <pluralLabel>FSL Minute Schedule Tasks</pluralLabel>
</CustomObject>