unpackaged/main/default/objects/FSL_Minute_Schedule_Task__mdt/fields/Repeat_Interval_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Repeat_Interval_Minutes__c</fullName>
    <defaultValue>1</defaultValue>
    <description>The interval in minutes to repeat this task.  Minimum is 1 (and the default) and maximum is 9999 (almost 1 week)</description>
    <inlineHelpText>Repeat this task once per number of minutes equal to this value</inlineHelpText>
    <label>Repeat Interval (Minutes)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>