unpackaged/main/default/objects/FSL_Minute_Schedule_Task__mdt/fields/Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_Time__c</fullName>
    <label>Start Date/Time</label>
    <type>DateTime</type>
</CustomField>