unpackaged/main/default/objects/FSL_Minute_Schedule_Task__mdt/validationRules/Ranges.validationRule-meta.xml
<ValidationRule>
    <fullName>Ranges</fullName>
    <active>true</active>
    <description>Range of allowed values</description>
    <errorConditionFormula>Repeat_Interval_Minutes__c &lt; 1 ||  Repeat_Interval_Minutes__c &gt; 9999</errorConditionFormula>
    <errorMessage>Repeat Interval (Minutes) must be a  value greater than equal to 1 and less than 10000</errorMessage>
</ValidationRule>